--- a/bywho.html
+++ b/bywho.html
@@ -7,7 +7,7 @@
     </head>
     <body>
 		
-		<a href="main.html" class="button">Menu principal</a>
+		<a href="index.html" class="button">Menu principal</a>
 
 		<h1>Tao</h1> 
 		
