--- a/hint.html
+++ b/hint.html
@@ -6,7 +6,7 @@
 		<link href="main_style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-		<a href="main.html" class="button">Menu principal</a>
+		<a href="index.html" class="button">Menu principal</a>
 
 		<h1>Lieu et dates</h1> 
 		
