--- a/bywho.html
+++ b/bywho.html
@@ -13,8 +13,7 @@
 		
 		<div id="block"><div /> <br />
 		
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Mes anciens projets</a>
-		<audio controls src="Audio/dans_le_regard_de_laura.mp3">Salut</audio>
+		<audio controls src="Audio/chill.mp3">Salut</audio>
 		
 	</body> 
 </html>
