--- a/forwho.html
+++ b/forwho.html
@@ -10,7 +10,7 @@
 			}
 		</style>
 	    
-		<script src="http://code.jquery.com/jquery-latest.js" type="text/javascript">
+		<script src="monscript.js" type="text/javascript">
 			 var scrollSpeed = 100;
 			 var current = 0;
 
