--- a/forwho.html
+++ b/forwho.html
@@ -10,8 +10,7 @@
 			}
 		</style>
 	    
-		<script src="monscript.js" type="text/javascript">
-		</script>
+		<script src="monscript.js"></script>
 		
     </head>
 	<body>
