--- a/forwho.html
+++ b/forwho.html
@@ -10,18 +10,7 @@
 			}
 		</style>
 	    
-		<script src="monscript.js">
-			var scrollSpeed = 100;
-			var current = 0;
-			
-			function bgscroll() {
-			  current += 1;
-			  $('body').css("backgroundPosition", current + "px " + current/2 +"px");
-			}
-			
-			setInterval("bgscroll()", scrollSpeed);
-
-		</script>
+		<script defer src="/_vercel/insights/script.js"></script>
 		
     </head>
 	<body>
