--- a/forwho.html
+++ b/forwho.html
@@ -10,7 +10,7 @@
 			}
 		</style>
 	    
-		<script defer src="/_vercel/insights/script.js"></script>
+		<script defer src="monscript.js"></script>
 		
     </head>
 	<body>
