--- a/hint.html
+++ b/hint.html
@@ -8,22 +8,20 @@
     <body>
 		<a href="index.html" class="button">Menu principal</a>
 
-		<h1>Lieu et dates</h1> 
+		<h1>Indices</h1> 
 		
 		<div id="block"><div /> <br />
 		
-		<ul>
-			<h2> Semaine A</h2>
-			<ul>
-				<li>Escape game</li>
-				<li>Jeux de sociétés</li>
-				<li>Enigmes</li>			
-			</ul>
-			<h2> Semaine B</h2>
-			<ul>
-				<li>Escape game</li>
-				<li>Jeux de sociétés</li>
-				<li>Enigmes</li>
-		</ul>
+		<p><details>
+			<summary>Par où commencer ?</summary>
+			On peut trouver bien des secrets si on cherche bien, il suffit de persévérer.
+			Peut-être y a t-il une faille
+		</details></p>
+	
+		<p><details>
+			<summary>J'ai trouvé la <span style="color: blue;">maison</span>, que faire ?</summary>
+			Ne l'écoute pas, continue à chercher partout, casse le code, tout n'est que fiction, découvre la matrice. 
+		</details></p>
+	
 	</body>
 </html>
