--- a/maison.html
+++ b/maison.html
@@ -26,7 +26,7 @@
 	<body>
 	<h1>La <span class="maison">Maison</span> des feuilles</h1>
 	<h2>Mark Z. Danielewski</h2>
-	
+	<img src="images/house.jpg" />
 	<!-- 
 	##############################################################################
 	##############################################################################
@@ -34,7 +34,7 @@
 	
 	Donc tu aimes fouiller, bizarre.
 	J'imagine que c'est un peu de la triche, mais c'est bien pensé
-	Voici un petit cadeau : https://vercel.com/tagoriers-projects/le-club-de-maths/end271828.html
+	Voici un petit cadeau : https://vercel.com/tagoriers-projects/le-club-de-maths/the-end-is-near.html
 		
 	Bonne chance
 	
@@ -44,9 +44,10 @@
 	-->
 	
 	<p>
-		Voici la <a href="https://youtu.be/xvFZjo5PgG0?si=ubqJSMvMKc6Q9pZa">maison</a> dans ces inextricables détours.
+		Voici la fameuse et difficultueuse <a href="https://www.fnac.com/a16889417/Mark-Z-Danielewski-La-Maison-des-feuilles">maison</a> et ses inextricables détours
 	</p>
 	<a href="index.html">maison</a> <br />
+	<a href="https://tagorier.itch.io/turmsturm">maison</a> <br />
 	<a href="hint.html">maison</a> <br />
 	<a href="forwho.html">maison</a> <br />
 	<a href="arrête de regarder dans les url">maison</a> <br />
@@ -54,6 +55,6 @@
 	<a href="maison.html">maison</a> <br />
 	<a href="images/backroom.jpg">maison</a> <br />
 	<a href="whenwhere.html">maison</a> <br />
-	<a href="https://www.fnac.com/a16889417/Mark-Z-Danielewski-La-Maison-des-feuilles">maison</a> <br />
+	<a href="https://youtu.be/xvFZjo5PgG0?si=ubqJSMvMKc6Q9pZa">maison</a> <br />
 	</body>
 </html>
