--- a/whenwhere.html
+++ b/whenwhere.html
@@ -12,18 +12,27 @@
 		
 		<div id="block"><div /> <br />
 		
-		<ul>
-			<h2> Semaine A</h2>
+		<h2> Où ?</h2>
+		<p>Il y a des séances au CDI, mais il y aussi des activités en ligne, <a href="blog.html">rejoignez notre blog</a> !</p>
+
+		<h2> Quand ?</h2>
+		
+		<p>Le club de maths, c'est tous les jeudi de 13h à 14h du 14 novembre au 19 décembre</p>
+		<details>
+			<summary>Les activités ludiques en semaine A</summary>
 			<ul>
 				<li>Escape game</li>
 				<li>Jeux de sociétés</li>
 				<li>Enigmes</li>			
 			</ul>
-			<h2> Semaine B</h2>
+		</details>
+		<details>
+			<summary>Des défis en semaine B</summary>		
 			<ul>
-				<li>Escape game</li>
-				<li>Jeux de sociétés</li>
-				<li>Enigmes</li>
-		</ul>
+				<li>Axiomes et définition</li>
+				<li>Les raisonnements logiques et la démonstration</li>
+				<li>Les problèmes de recherche</li>
+			</ul>
+		</details>
 	</body>
 </html>
