--- a/bywho.html
+++ b/bywho.html
@@ -9,11 +9,16 @@
 		
 		<a href="index.html" class="button">Menu principal</a>
 
-		<h1>Tao</h1> 
-		
+		<h1><mark class='censored'>Tao VINCENT--NGUYEN</mark></h1> 
+
 		<div id="block"><div /> <br />
-		
-		<audio controls src="Audio/chill.mp3">Salut</audio>
+		<p>
+			Bonjour, je m'appelle <mark class='censored'>Tao VINCENT--NGUYEN</mark> et je suis le fondateur du club !!! <br />
+			J'ai crée le club de maths dans le but de rencontrer des gens qui partage ma passion, j'espère vous voire plus nombreux que l'année dernière (=
+		</p>
+		<p>Mon théorème préféré : le théorème fondamental de l'analyse</p>
+		<p>Le blob : Physarum polycephalum
+		<p>Ma musique préféré : <audio controls src="Audio/chill.mp3">Salut</audio></p>
 		
 	</body> 
 </html>
