--- a/bywho.html
+++ b/bywho.html
@@ -14,7 +14,7 @@
 		<div id="block"><div /> <br />
 		<p>
 			Bonjour, je m'appelle <mark class='censored'>Tao VINCENT--NGUYEN</mark> et je suis le fondateur du club !!! <br />
-			J'ai crée le club de maths dans le but de rencontrer des gens qui partage ma passion, j'espère vous voire plus nombreux que l'année dernière (=
+			J'ai crée le club de maths dans le but de rencontrer des gens qui partagent ma passion, j'espère vous voir plus nombreux que l'année dernière (=
 		</p>
 		<p>Mon théorème préféré : le théorème fondamental de l'analyse</p>
 		<p>Le blob : Physarum polycephalum
