--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Mathématiques</title>
+		<link href='https://fonts.googleapis.com/css?family=Courier Prime' rel='stylesheet'>
 		<link href="main_style.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
@@ -10,13 +11,15 @@
 		
 		<div id="block"><div /> <br />
 		
+		<span class="note">Bonjour, c'est moi, l'Editeur. J'ai découvert une sorte de code secret dans le blog, tu devrais y jeter un oeil.</span>
+		
 		<p>
 			Le club de maths c'est un club auto-géré par les élèves du lycées. Il y a une séance tous les jeudis de 13h à 14h au CDI !
 		</p>
 		<ul> 
-			<li><a href="whenwhere.html">Quand et Où ?</a></li>
-			<li><a href="forwho.html">Pour qui ?</a></li>
-			<li><a href="bywho.html">Par qui ? </a></li>
+			<li><a href="code1/whenwhere.html">Quand et Où ?</a></li>
+			<li><a href="code3/forwho.html">Pour qui ?</a></li>
+			<li><a href="code2/bywho.html">Par qui ? </a></li>
 	
 	
 			
