--- a/hint.html
+++ b/hint.html
@@ -12,16 +12,29 @@
 		
 		<div id="block"><div /> <br />
 		
-		<p><details>
-			<summary>Par où commencer ?</summary>
-			On peut trouver bien des secrets si on cherche bien, il suffit de persévérer.
-			Peut-être y a t-il une faille
-		</details></p>
-	
-		<p><details>
-			<summary>J'ai trouvé la <span style="color: blue;">maison</span>, que faire ?</summary>
-			Ne l'écoute pas, continue à chercher partout, casse le code, tout n'est que fiction, découvre la matrice. 
-		</details></p>
-	
+		<span class="note">
+			J'ai ressencé ici toutes mes découvertes, tu es libres de les lires.
+			
+			<p><details>
+				<summary>Par où commencer ?</summary>
+				<div class = "alinea">
+					L'Editeur (moi) semble parler d'un code, il faudrait le trouver
+				</div>
+			</details></p>
+		
+			<p><details>
+				<summary>J'ai trouvé le premier code, et après ?</summary>
+				<div class = "alinea">
+					· −·−· −−− ··− − · ···  −··· ·· · −·  ·−·· ·−  −− ··− ··· ·· −−·− ··− ·  ·−−· ·−· ··−·· ··−· ··−·· ·−· ··−·· ·  −·· ·  <span class="censored">− ·− −−−</span>  ··−−·· 
+				</div>
+			</details></p>
+			
+			<p><details>
+				<summary>J'ai trouvé la <span style="color: blue;">maison</span>, que faire ?</summary>
+				<div class = "alinea">
+					Ne l'écoute pas, continue à chercher partout, casse le code, tout n'est que fiction, découvre la matrice. 
+				</div>
+			</details></p>
+		</span>
 	</body>
 </html>
