--- a/code3/forwho.html
+++ b/code3/forwho.html
@@ -10,9 +10,8 @@
 			}
 		</style>
 		
-		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			 var scrollSpeed = 100;
+		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript">
+			var scrollSpeed = 100;
 			 var current = 0;
 
 			 function bgscroll() {
@@ -23,7 +22,7 @@
 
 			 setInterval("bgscroll()", scrollSpeed);
 		</script>
-		
+			
     </head>
 	<body>
 		
