--- a/code3/forwho.html
+++ b/code3/forwho.html
@@ -10,7 +10,8 @@
 			}
 		</style>
 		
-		<script src="../monscript.js" type="text/javascript">
+		<script src="../monscript.js" type="text/javascript"></script>
+	    	<script type="text/javascript">
 			var scrollSpeed = 100;
 			 var current = 0;
 
