--- a/doyoufeartheeyesofthefarshore.html
+++ b/doyoufeartheeyesofthefarshore.html
@@ -16,10 +16,18 @@
 	
 		<h2>Le club de maths existe !</h2>
 		<p>
-			Ca vous a plu ? On fait plein de truc similaire au club de maths. Bon en vrai, c'est faux, on fait pas ça, mais vous devriez au moins regarder le programme ça pourrait vous plaire.
+			Ca vous a plu ? On fait plein de truc similaire au club de maths. Bon en vrai, c'est faux, on fait pas ça, mais vous devriez au moins regarder le programme ça pourrait vous plaire. <br/>
 			On a par exemple un escape game de prévu, ça sera cool. Si vous n'êtes pas disponible le jeudi c'est pas grave, on a un groupe en ligne whatsapp : <a href=https://chat.whatsapp.com/DTxMDwh6IMTITbmruEtmpG>rejoindre</a> <br />
 			<a href="images/affiche.jpg">Regardez notre affiche</a>
 		</p>
-	
+		
+		<h2>Toutes les références</h2>
+		<ul>
+			<li>La maison des feuilles</li>
+			<li>Les backrooms</li>
+			<li>Undertale</li>
+			<li>Tunic</li>
+			<li>La maison des feuilles</li>
+		</ul>
 	</body>
 </html>
