--- a/code2/ipp.html
+++ b/code2/ipp.html
@@ -15,6 +15,6 @@
 	<img class="center" src="../images/ipp_tabulaire.png" style="width:400px;" />
 	<p> url=..theeyesof.. 2/3</p>
 
-	<img class="center" src="../images/hint-itwasmadeforyou.png" style="width:500px;" />
+	<img class="center" src="../images/hint-itwasmadeforyou.PNG" style="width:500px;" />
     </body>
 </html>
